--- a/scala-server/app/views/index.scala.html
+++ b/scala-server/app/views/index.scala.html
@@ -1,20 +1,8 @@
-@*
- * This template takes a single argument, a String containing a
- * message to display.
- *@
-@(message: String)
 
-@*
- * Call the `main` template with two arguments. The first
- * argument is a `String` with the title of the page, the second
- * argument is an `Html` object containing the body of the page.
- *@
-@main("Welcome to Play") {
+@main(title = "Home") {
 
-    @*
-     * Get an `Html` object by calling the built-in Play welcome
-     * template and passing a `String` message.
-     *@
-    @welcome(message, style = "scala")
+    <div id='root'>
+    </div>
+    <script src="@routes.Assets.versioned("javascripts/boardgame.bundle.js")" type="text/javascript"></script>
 
 }
